--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Felix Steinberger"
 name: "Felix Steinberger"
 description: "Embedded Imaging Specialist | Camera Systems | Open Source"
-url: "https://felixsteinberger.github.io"
+url: "https://felixsteinberger.dev"
 baseurl: ""
 repository: "felixsteinberger/felixsteinberger.github.io"
 
